refactor: sonnar code smells.